# t2d-risk-predictor

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_eda_nhanes.ipynb  02_baseline_model.ipynb
src/api/: main.py
tests/: test_placeholder.py
