[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "t2d-risk-predictor"
version = "0.1.0"
description = "Fairness-aware Type 2 Diabetes risk prediction"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Kesser Karim", email = "kesser.karim@port.ac.uk"}]

dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "fairlearn>=0.10",
    "shap>=0.44",
    "mlflow>=2.10",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "ipykernel",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
